updated fonts and favicon

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -97,11 +97,11 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-10">
+          <div class="col-md-8">
             <h1
               style="
-                font-family: Poppins, sans-serif;
-                font-weight: 700;
+                font-family: Readex Pro, sans-serif;
+                font-weight: 800;
                 font-size: 8rem;
               "
             >
@@ -109,7 +109,7 @@
             </h1>
             <p>&ensp; &ensp; &ensp; &ensp; &ensp; &ensp;</p>
             <p>&ensp; &ensp; &ensp; &ensp; &ensp; &ensp;</p>
-            <h4 style="font-family: Poppins, sans-serif; font-weight: 700">
+            <h4 style="font-family: Readex Pro, sans-serif; font-weight: 700">
               Hello !
             </h4>
             <h5 style="font-family: Roboto Flex, sans-serif; font-weight: 400">
@@ -128,8 +128,8 @@
       <div class="container">
         <div class="section section-text">
           <div class="row">
-            <div class="col-md-10 ml-auto mr-auto">
-              <h3 style="font-family: Poppins, sans-serif; font-weight: 700">
+            <div class="col-md-8 ml-auto mr-auto">
+              <h3 style="font-family: Readex Pro, sans-serif; font-weight: 700">
                 Let&apos;s dig deeper...
               </h3>
               <h5
@@ -195,7 +195,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Poppins, sans-serif; font-weight: 500"
+        style="font-family: Readex Pro, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
