--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -89,7 +89,7 @@
       </div>
     </nav>
 
-    <!--MAIN-->
+    <!--TITLE-->
     <div
       class="page-header header-filter header-small"
       data-parallax="true"
@@ -97,12 +97,12 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-12 ml-auto mr-auto">
+          <div class="col-md-10 ml-auto mr-auto">
             <div class="brand text-center">
               <h1
                 style="
-                  font-family: Poppins, sans-serif;
-                  font-weight: 700;
+                  font-family: Readex Pro, sans-serif;
+                  font-weight: 800;
                   font-size: 8rem;
                 "
               >
@@ -113,19 +113,21 @@
         </div>
       </div>
     </div>
+
+    <!--MAIN-->
     <div class="main main-raised">
       <div class="container">
         <div class="section text-center">
           <h2
             style="
-              font-family: Poppins, sans-serif;
+              font-family: Readex Pro, sans-serif;
               font-weight: 700;
               font-size: 3rem;
             "
           >
             Brigham Young University
           </h2>
-          <h3 style="font-family: Poppins, sans-serif; font-weight: 600">
+          <h3 style="font-family: Readex Pro, sans-serif; font-weight: 600">
             Computer Science & Programming
           </h3>
           <div class="profile col-md-3 ml-auto mr-auto">
@@ -138,7 +140,7 @@
             </div>
           </div>
           <div class="section text-center col-md-6 ml-auto mr-auto">
-            <h4 style="font-family: Poppins, sans-serif; font-weight: 600">
+            <h4 style="font-family: Readex Pro, sans-serif; font-weight: 600">
               Relevant Coursework Completed
             </h4>
             <ul
@@ -183,14 +185,14 @@
         <div class="section text-center">
           <h2
             style="
-              font-family: Poppins, sans-serif;
+              font-family: Readex Pro, sans-serif;
               font-weight: 700;
               font-size: 3rem;
             "
           >
             University of Utah
           </h2>
-          <h3 style="font-family: Poppins, sans-serif; font-weight: 600">
+          <h3 style="font-family: Readex Pro, sans-serif; font-weight: 600">
             Strategic Communications
           </h3>
           <div class="profile col-md-6 ml-auto mr-auto">
@@ -203,7 +205,7 @@
             </div>
           </div>
           <div class="section text-center col-md-8 ml-auto mr-auto">
-            <h4 style="font-family: Poppins, sans-serif; font-weight: 600">
+            <h4 style="font-family: Readex Pro, sans-serif; font-weight: 600">
               Relevant Coursework Completed
             </h4>
             <ul
@@ -245,7 +247,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Poppins, sans-serif; font-weight: 500"
+        style="font-family: Readex Pro, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
