--- a/experience.html
+++ b/experience.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="index.html"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -97,11 +97,11 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-12 ml-auto mr-auto">
+          <div class="col-md-10 ml-auto mr-auto">
             <div class="brand text-center">
               <h1
                 style="
-                  font-family: Poppins, sans-serif;
+                  font-family: Readex Pro, sans-serif;
                   font-weight: 700;
                   font-size: 8rem;
                 "
@@ -115,17 +115,23 @@
     </div>
 
     <!--MAIN-->
-    <div class="section">
+    <div class="main main-raised main-product">
       <div class="container">
-        <div class="main main-raised main-product">
+        <div class="section">
           <div class="related-products">
             <br />
             <h2
               class="text-center"
-              style="font-family: Poppins, sans-serif; font-weight: 600"
+              style="
+                font-family: Readex Pro, sans-serif;
+                font-weight: 700;
+                font-size: 3rem;
+              "
             >
               PROGRAMMING
             </h2>
+            <p>&ensp; &ensp;</p>
+            <p>&ensp; &ensp;</p>
             <br />
             <div class="row">
               <div class="col-md-2 ml-auto mr-auto">
@@ -142,6 +148,8 @@
                     <ul
                       class="nav nav-pills nav-pills-icons justify-content-center"
                     >
+                      <p>&ensp; &ensp;</p>
+                      <p>&ensp; &ensp;</p>
                       <li class="nav-item">
                         <a
                           class="nav-link active"
@@ -152,6 +160,7 @@
                         </a>
                       </li>
                     </ul>
+                    <p>&ensp; &ensp;</p>
                   </div>
                   <br />
                 </div>
@@ -171,16 +180,19 @@
                     <ul
                       class="nav nav-pills nav-pills-icons justify-content-center"
                     >
+                      <p>&ensp; &ensp;</p>
+                      <p>&ensp; &ensp;</p>
                       <li class="nav-item">
                         <a
                           class="nav-link active"
                           role="tab"
                           href="https://github.com/steven-crosby/Java_Work"
                         >
-                          Java Projects
+                          Java <br />Projects
                         </a>
                       </li>
                     </ul>
+                    <p>&ensp; &ensp;</p>
                   </div>
                   <br />
                 </div>
@@ -200,16 +212,20 @@
                     <ul
                       class="nav nav-pills nav-pills-icons justify-content-center"
                     >
+                      <p>&ensp; &ensp;</p>
+                      <p>&ensp; &ensp;</p>
                       <li class="nav-item">
                         <a
                           class="nav-link active"
                           role="tab"
                           href="https://github.com/steven-crosby/CPP_Work"
                         >
-                          C++ &ensp; Projects
+                          C++ <br />
+                          Projects
                         </a>
                       </li>
                     </ul>
+                    <p>&ensp; &ensp;</p>
                   </div>
                   <br />
                 </div>
@@ -229,6 +245,8 @@
                     <ul
                       class="nav nav-pills nav-pills-icons justify-content-center"
                     >
+                      <p>&ensp; &ensp;</p>
+                      <p>&ensp; &ensp;</p>
                       <li class="nav-item">
                         <a
                           class="nav-link active"
@@ -239,6 +257,7 @@
                         </a>
                       </li>
                     </ul>
+                    <p>&ensp; &ensp;</p>
                   </div>
                   <br />
                 </div>
@@ -257,6 +276,7 @@
                             alt=""
                           />
                         </div>
+                        <p>&ensp; &ensp;</p>
                         <br />
                         <div class="profile-tabs">
                           <ul
@@ -278,6 +298,7 @@
                             alt=""
                           />
                         </div>
+                        <p>&ensp; &ensp;</p>
                         <br />
                         <div class="profile-tabs">
                           <ul
@@ -299,6 +320,7 @@
                             alt=""
                           />
                         </div>
+                        <p>&ensp; &ensp;</p>
                         <br />
                         <div class="profile-tabs">
                           <ul
@@ -320,6 +342,7 @@
                             alt=""
                           />
                         </div>
+                        <p>&ensp; &ensp;</p>
                         <br />
                         <div class="profile-tabs">
                           <ul
@@ -340,12 +363,15 @@
                         <h2
                           class="text-center"
                           style="
-                            font-family: Poppins, sans-serif;
-                            font-weight: 600;
+                            font-family: Readex Pro, sans-serif;
+                            font-weight: 700;
+                            font-size: 3rem;
                           "
                         >
                           TOOLS
                         </h2>
+                        <p>&ensp; &ensp;</p>
+                        <p>&ensp; &ensp;</p>
                         <br />
                         <div class="container">
                           <div class="row">
@@ -359,6 +385,7 @@
                                     alt=""
                                   />
                                 </div>
+                                <p>&ensp; &ensp;</p>
                                 <br />
                               </div>
                             </div>
@@ -372,6 +399,7 @@
                                     alt=""
                                   />
                                 </div>
+                                <p>&ensp; &ensp;</p>
                                 <br />
                               </div>
                             </div>
@@ -385,6 +413,7 @@
                                     alt=""
                                   />
                                 </div>
+                                <p>&ensp; &ensp;</p>
                                 <br />
                               </div>
                             </div>
@@ -397,6 +426,7 @@
                                     alt=""
                                   />
                                 </div>
+                                <p>&ensp; &ensp;</p>
                                 <br />
                               </div>
                             </div>
@@ -409,6 +439,7 @@
                                     alt=""
                                   />
                                 </div>
+                                <p>&ensp; &ensp;</p>
                                 <br />
                               </div>
                             </div>
@@ -421,6 +452,7 @@
                                     alt=""
                                   />
                                 </div>
+                                <p>&ensp; &ensp;</p>
                                 <br />
                               </div>
                             </div>
@@ -444,7 +476,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Poppins, sans-serif; font-weight: 500"
+        style="font-family: Readex Pro, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
