--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Poppins, sans-serif; font-weight: 500"
+            style="font-family: Readex Pro, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="about.html" class="nav-link">
@@ -109,8 +109,8 @@
                   <div class="name">
                     <h1
                       style="
-                        font-family: Poppins, sans-serif;
-                        font-weight: 700;
+                        font-family: Readex Pro, sans-serif;
+                        font-weight: 800;
                         font-size: 8rem;
                       "
                     >
@@ -118,21 +118,13 @@
                     </h1>
                     <p>&ensp; &ensp;</p>
                     <h3
-                      style="
-                        font-family: Poppins, sans-serif;
-                        font-weight: 600;
-                      "
+                      style="font-family: Readex Pro, sans-serif; font-weight: 600"
                     >
                       Software Development & Design
                     </h3>
                     <p>&ensp; &ensp;</p>
-                    <p>&ensp; &ensp;</p>
-                    <p>&ensp; &ensp;</p>
                     <h4
-                      style="
-                        font-family: Poppins, sans-serif;
-                        font-weight: 600;
-                      "
+                      style="font-family: Readex Pro, sans-serif; font-weight: 500"
                     >
                       &ensp;JAVA&ensp; &ensp; &ensp;&ensp; C/C++ &ensp; &ensp;
                       &ensp;&ensp; PYTHON &ensp; &ensp; &ensp;&ensp; JAVASCRIPT
@@ -191,7 +183,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Poppins, sans-serif; font-weight: 500"
+        style="font-family: Readex Pro, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
